--- a/frontend/web-app/app/globals.css
+++ b/frontend/web-app/app/globals.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.react-datepicker-wrapper {
+    width: 100%;
+}
+
+@layer components {
+    .input-custom {
+        @apply flex-grow pl-5 bg-transparent focus:outline-none border-transparent focus:border-transparent focus:ring-0
+    }
+}
